# movies-recommender

./: .env  .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  app.py  db.py  docker-compose.yaml  main.py  models.py  pyproject.toml  utils.py
backend/app/: db.py  local.py  main.py  models.py  routes.py  utils.py
backend/models/: movie_id_to_matrix_similarity_idx.pkl  similarity_matrix.pkl  similarity_matrix_tvs.pkl  tv_id_to_matrix_similarity_idx.pkl
backend/public/: recommended.json
backend/public/fe/: asset-manifest.json  index.html
backend/public/fe/static/css/: main.259587b5.css  main.259587b5.css.map  main.66b4ea9f.css  main.66b4ea9f.css.map  main.a5d3fb00.css  main.a5d3fb00.css.map  main.dd2c23a4.css  main.dd2c23a4.css.map
backend/public/fe/static/js/: 787.b2214c42.chunk.js  787.b2214c42.chunk.js.map  main.08993d7b.js  main.08993d7b.js.map  main.2afc6862.js  main.2afc6862.js.map  main.376801c1.js  main.376801c1.js.map  main.57bbaf0f.js  main.57bbaf0f.js.map  main.61b01abc.js  main.61b01abc.js.map  main.66ba964b.js  main.66ba964b.js.map  main.7493b7fd.js  main.7493b7fd.js.map  main.fcfa6308.js  main.fcfa6308.js.map
frontend/: deploy.sh  package-lock.json  package.json
k8s/: be-deployment.yaml  be-ingress.yaml  be-service.yaml  postgres-deployment.yaml  postgres-secret.yaml  postgres-service.yaml
notebooks/: collaborative-filtering.ipynb  environment.yml  migration.ipynb  mlops.ipynb  normalize-rating-data.ipynb  recommendations.ipynb  similarity-tvs.ipynb  similarity.ipynb  tmdb-movies-scraper.ipynb  tmdb-tv-scraper.ipynb
(+20 files in other folders)
