[tool.poetry]
name = "movies-be"
version = "0.1.0"
description = ""
authors = ["itamarco <itc404@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.19"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
psycopg2 = "^2.9.7"
numpy = "^1.25.2"
pandas = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
